force-app/main/default/objects/ssot__GeneratedOperationPlanStep__dlm/fields/ssot__GeneratedOperationPlanId__c.field-meta.xml
<CustomField>
    <fullName>ssot__GeneratedOperationPlanId__c</fullName>
    <label>Generated Operation Plan</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>GeneratedOperationPlanId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>