force-app/main/default/objects/ssot__GeneratedOperationPlanStep__dlm/fields/ssot__rel_1723128374812_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1723128374812_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>GeneratedOperationPlanStep_Generated_rel</label>
    <referenceTo>ssot__GeneratedOperationPlan__dlm</referenceTo>
    <relationshipLabel>GeneratedOperationPlanStep_Generated_rel</relationshipLabel>
    <relationshipName>rel_1723128374812_end</relationshipName>
    <type>Lookup</type>
</CustomField>