force-app/main/default/objects/ssot__GeneratedOperationPlanStep__dlm/fields/ssot__RelatedActionName__c.field-meta.xml
<CustomField>
    <fullName>ssot__RelatedActionName__c</fullName>
    <label>Related Action Name</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>RelatedActionName</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>