force-app/main/default/objects/ssot__GeneratedOperationPlanStep__dlm/fields/ssot__RelatedActionReferenceId__c.field-meta.xml
<CustomField>
    <fullName>ssot__RelatedActionReferenceId__c</fullName>
    <label>Related Action Reference</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>RelatedActionReferenceId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>