force-app/main/default/objects/ssot__GeneratedOperationPlanStep__dlm/fields/ssot__RelatedActionReferenceObject__c.field-meta.xml
<CustomField>
    <fullName>ssot__RelatedActionReferenceObject__c</fullName>
    <label>Related Action Reference Object</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>RelatedActionReferenceObject</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>