force-app/main/default/objects/ssot__GeneratedOperationPlanStep__dlm/fields/ssot__StepSummaryText__c.field-meta.xml
<CustomField>
    <fullName>ssot__StepSummaryText__c</fullName>
    <label>Step Summary</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>StepSummaryText</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>